--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tacs",
-  "version": "1.1.3",
-  "description": "tacs: Task Conveyor System is a system that can be used to run a series of functions in a sequential order.",
+  "version": "1.3.3",
+  "description": "Tacs is Task Conveyor System is a system that can be used to run a series of functions in a sequential order.",
   "main": "index.js",
   "types": "./types/index.d.ts",
   "scripts": {
@@ -18,7 +18,8 @@
     "load-balancer",
     "load-balancer-system",
     "load-balancer-system-tacs",
-    "load-balancer-system-tacs-task"
+    "load-balancer-system-tacs-task",
+    "array"
   ],
   "repository": {
     "type": "git",
@@ -29,5 +30,8 @@
   },
   "homepage": "https://github.com/4i8/tacs#readme",
   "license": "Apache-2.0",
-  "author": "Arth"
+  "author": "Arth",
+  "dependencies": {
+    "object-contains": "^0.1.0"
+  }
 }
